--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div class="sidebar">
     <h4 class="sidebar-heading">Show results for:</h4>
     <div class="categories-sidebar-list">
-      <h4 class="sidebar-heading">All Categories</h4>
+      <h4 class="sidebar-list-heading">All Categories</h4>
       <ul>
         <li>Home & Living</li>
         <li>Art & Collectibles</li>
